--- a/SI539/Portfolio/assets/stylesheets/style.css
+++ b/SI539/Portfolio/assets/stylesheets/style.css
@@ -1,38 +1,62 @@
-/* ===============================================================
+/* +++++++++++++++++++
 For all pages
-================================================================ */
+++++++++++++++++++++++ */
 
+.container-fluid{
+    padding: 0;
+    
+}
 body{
 	margin:0px;
-	font-family: sans-serif,Play,Courier,Helvetica;
+    font-family: 'Play', sans-serif;
     background-color: #FAFAFA;
 }
 h1{
 	text-align: center;
 	padding-top: 120px; 
 	padding-bottom:40px;
-	font-size: 1.8em;
+	font-size: 2.5em;
     color: #FAFAFA;
     margin:0px;
 }
 h2{
 	text-align: center;
-	font-size: 1em;
+	font-size: 1.8em;
     color: #FAFAFA;
     margin:0px;
 
 }
 
-/* --------------------------------------------------------------
-For all pages header 
--------------------------------------------------------------- */
-.navBar{
-	height:88px;
-	background-color: #7674BB;
-    height: 100%;
+/* ++++++++++++++++++++
+Page Header 
++++++++++++++++++++++++ */
 
+
+.navbar {
+		margin-bottom: 0;
+		background-color: #7674BB;
+		color: #FAFAFA;
+		font-size: 1em;
+		border: 0;
+        border-radius: 0;
+        padding: 0 20px
+	}
+
+
+
+.navbar-default .navbar-nav li a {
+		color: #FAFAFA;
+	}
+
+.navbar-default .navbar-brand {
+    color: #FAFAFA;
 }
 
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #7674BB;
+    background-color: #FAFAFA;
+}
+/*
 .headerNav{
 	list-style-type: none;
     min-width: 910px;
@@ -40,57 +64,69 @@ For all pages header
     margin: 0;
     padding: 25px;
     text-align: right;
-}
+    }
 
 .headerNav li {
     width: auto;
     height: auto;
     text-align: center;
     display: inline-block;
+    }
 
-}
-#name {
-    list-style-type: none;
-    padding: 0px 40% 0px 0;
-    width: auto;
-    text-align: center;
-    display: inline-block;
-}
 .headerNav li a {
     text-decoration: none;
     text-align: center;
-    width: 100%;
     padding: 0px 10px;
+    font-size: 1em;
     color:#FAFAFA;
 
 }
 
 .headerNav li a:hover{
 	box-sizing: border-box;
-    color: #FAFAFA;
-}
-
-/*
-#indexBody li#index a,#cvBody li#cv a,#inspirationBody li#inspiration a,#photoBody li#photo a,#formBody li#form a{ 	
-    box-sizing: border-box;
-    background-color: lightgrey; 
-    font-weight: bold;
+    color: darkkhaki;
 }
 */
 
+.navbar-header{
+    display: block;
+    margin-right: auto;
+    margin-left: auto
 
-/* ------projects------ */
+}
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+    color: silver;
+}
 
-/*about*/
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+    color: silver;
+}
+.navbar-brand{
+    color:#FAFAFA;
+    font-size: 1em;
+    padding-left: 30px;
+    float: left
+}
+
+.logo{
+    display:inline-block;
+    padding-top: 10px
+}
+
+
+/*==============================HOMEPAGE==========================*/
+
+/* ------banner------ */
 .aboutContainer{
-    background-image: url('photos/Xiaochuan.JPG');
+    background-image: url(..//images/photos/Xiaochuan.JPG);
     background-size: cover;
     background-position: center center;
+    width: 100%;
 }
 .about{
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
     color: #FAFAFA
-    width: 200px;
+    width: 100%;
     height: 700px;
     margin: 0
         
@@ -99,61 +135,160 @@ For all pages header
     color: #FAFAFA
 
 }
-/*
-.myPhoto{
-    display: inline-block;
-    max-width: 100%;
-    height: auto;
-    
-}
-*/
-.portfolio{
-  background-color: #7674BB;
 
+
+#panel
+{
+	padding:0px;
+	display:none;
+    margin:0
 }
-#portfolioTitle{
-  padding: 30px 0 60px 0;
+
+.portfolio{
+  background-color: #FAFAFA;
+}
+
+.row{
+    background-color:#7674BB 
+}
+.projectstitle{
+    margin: 0;
+    padding: 30px 0 60px 0;
     text-align: center;
     font-size: 1.8em;
     background-color: #7674BB;
     color:#FAFAFA
 }
+.projContainer{
+    background-color: rgba(225, 225, 225, 0.2);
+    width: 100%;
+    height: 350px;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 65px;
+    color:#FAFAFA
+}
+
+.projContainer:hover{
+    color:#7674BB;
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.7);
+    
+}
+
 .proj{
-/*  display: inline-block;*/
-  width: 500px;
+  width: 100%;
   height: 350px;
   text-align: center;
   background-color: #FAFAFA;
   line-height: 200px;
 }
 
+.Menlo{
+    background: url(..//images/photos/menlo.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+}
+
 .Vekup{
-    background: url(photos/vekup.png);
+    background: url(..//images/photos/vekup.png);
     background-size: 300px auto;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center bottom;
 }
 
-.vekupContainer{
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 500px;
-    height: 350px;
+
+.Coldplay{
+    background: url(..//images/photos/coldplay.jpg);
+    background-size: 500px 100%;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-/* grid */
-.gridContainer{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  text-align: center;
-  margin: 0;
+.Illustration{
+    background: url(..//images/photos/illustration.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center bottom;
 }
 
-/* --------------------------------------------------------------
+/*==============================UXRESEARCH==========================*/
+.menloImg{
+    padding: 40px 0 0 0;
+    text-align: center
+}
+
+/*==============================UXDESIGN==========================*/
+.contentWrapper{
+	width:65%;
+	margin: auto;
+    padding: 80px 0 0 0;
+	position: relative;
+	
+}
+
+.titleA{
+	font-weight:400;
+	font-size: 40px;
+	color: #7674BB;
+	line-height:80px;
+	margin: 0 0 10px 0;
+	overflow:visible;   
+}
+
+
+.titleB,.titleBblack {
+	font-weight: 200;
+	font-size: 20px;
+    line-height: 15px;
+	color: rgba(118, 116, 187, 0.7);
+}
+
+.titleBblack{
+    color: #323234;
+    margin: 20px 0 20px 0;
+
+}
+
+.contentA{
+    font-weight: 100;
+	font-size: 15px;
+    line-height: 22px;
+    color: #323234;
+    margin: 40px 50px;
+    text-align:left
+}
+
+.alignCenter{
+	text-align: center;
+}
+
+.vekupImg{
+    padding: 30px 0
+}
+
+/*==============================ILLUSTRATION==========================*/
+.img{
+	display:inline-block;
+	overflow: hidden;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+
+
+
+/* ++++++++++++++++++++++
 For all pages footer 
--------------------------------------------------------------- */
++++++++++++++++++++++++++ */
+
 .footerBox{
 	background: #7674BB;
-	margin-top: 40px;
 	height: 100%;
 }
 
@@ -174,43 +309,94 @@ For all pages footer
     display: block;
     text-align: center;
     font-size: 0.8em;
-    padding: 0px 0px 10px 0px;
+    padding: 10px 0px 10px 0px;
 }
 
-/* --------------------------------------------------------------
-For index 
--------------------------------------------------------------- */
-.btn{
-    text-align: center;
-    text-decoration: none;
-}
-div.welcome{
-    min-width: 910px;
-}
-/* --------------------------------------------------------------
-For illustration 
--------------------------------------------------------------- */
 
-.img{
-	display:inline-block;
-	overflow: hidden;
-    margin-left:auto;
-    margin-right:auto;
+@media screen and (max-width:768px) {
+     .aboutContainer{
+        display: none;
+    }
+    .projectstitle{
+       margin-top: 70px;
+       background-color: #FAFAFA;
+       color:#7674BB
+    }
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: #FAFAFA;}
+
+    .video{
+    display:none
+}
+    .videoLink{
+        padding: 10px 0 30px 0
+    }
+    
+}
+    
+@media screen and (min-width:768px) {
+     .projects{
+        display:inline-block;
+        width: 100%;}
+    .videoLink{
+        display: none
+    }
+ 
+
 }
 
-div.img img {
-    width: 100%;
+@media screen and (min-width:992px) {
+    .projects{
+        display:inline-block;
+        width: 49.8%
+    }
+    .navbar-brand{
+        float: left;}
+    div.img img {
+    width: 50%;
     height: auto;
+    display: inline-block}
+   
 }
 
-@media screen and (min-width:100px) {
 
+
+
+@media screen and (min-width:1200px) {
+    .projects{
+        display:inline-block;
+        width: 33.1%
+    }
+    
+    .headerNav{
+	list-style-type: none;
+    min-width: 910px;
+    width: auto;
+    margin: 0;
+    padding: 25px;
+    text-align: right;
+    }
+
+    .headerNav li {
+    width: auto;
+    height: auto;
+    text-align: center;
+    display: inline-block;
+    }
+
+    .headerNav li a {
+    text-decoration: none;
+    text-align: center;
+    padding: 0px 10px;
+    font-size: 1em;
+    color:#FAFAFA;
+
+    }
+
+    .headerNav li a:hover{
+	box-sizing: border-box;
+    color: darkkhaki;
 }
 
-@media screen and (min-width:550px) {
-
-}
-
-@media screen and (min-width:800px) {
 
 }
