--- a/SI539/Portfolio/assets/stylesheets/style.css
+++ b/SI539/Portfolio/assets/stylesheets/style.css
@@ -219,6 +219,9 @@ Page Header
     padding: 40px 0 0 0;
     text-align: center
 }
+.menloImg ing{
+     width = 80%
+}
 
 /*==============================UXDESIGN==========================*/
 .contentWrapper{
