--- a/SI539/Portfolio/assets/stylesheets/style.css
+++ b/SI539/Portfolio/assets/stylesheets/style.css
@@ -220,7 +220,7 @@ Page Header
     text-align: center
 }
 .menloImg img{
-     width = 80%
+     width: 80%
 }
 
 /*==============================UXDESIGN==========================*/
