--- a/SI539/Portfolio/assets/stylesheets/style.css
+++ b/SI539/Portfolio/assets/stylesheets/style.css
@@ -217,7 +217,8 @@ Page Header
 /*==============================UXRESEARCH==========================*/
 .menloImg{
     padding: 40px 0 0 0;
-    text-align: center
+    text-align: center;
+    width: 80%
 }
 .menloImg img{
      width: 80%
